# GRET-SDP-DEMO

./: .gitignore  CMakeLists.txt  README.md  gret-sdp-demo.cpp  shared.h
cmake/: FindMOSEK.cmake
examples/: README.md  example1.cpp  example5.cpp  sdpa_exe.cpp
examples/data/: sdpa-exe.out  sdpa-problem.dat-s  sdpa-problem.out
